syntax = "proto3";

option go_package = "./proto";

package todo;

service TodoService {
    rpc AddTodo(AddTodoRequest) returns (AddTodoResponse); 
    rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
    rpc CompleteTodo(CompleteTodoRequest) returns (CompleteTodoResponse);
}

message Todo {
    string id = 1;
    string title = 2;
    string description = 3;
    Status status = 4;
}

enum Status {
    TODO_UNKNOWN = 0;
    TODO_PENDING = 1;
    TODO_COMPLETED = 2;
}

message AddTodoRequest {
    string title = 1;
    string description = 2;
}

message AddTodoResponse {
    Todo todo = 1;
}
message ListTodosRequest {

}

message ListTodosResponse {
    repeated Todo todos = 1;
}

message CompleteTodoRequest {
    string id = 1;
}

message CompleteTodoResponse{
    Todo todo = 1;
}